infra/k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: permits
  namespace: permits
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      limit_except GET {
        deny all;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${TF_VAR_hostname}
      secretName: permits-tls
  rules:
    - host: ${TF_VAR_hostname}
      http:
        paths:
          - path: /permits
            pathType: Prefix
            backend:
              service:
                name: permits-backend
                port:
                  number: 80
